Add JavaTool and update simple-examples-java